<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="35dip"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="35dip"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/pill_box_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="17sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/pill_box_sunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Sunday"
            android:textColor="#6d726d"
            android:textSize="17sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/pill_box_monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#6d726d"
            android:text="@string/Monday"
            android:textSize="17sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/pill_box_tuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#6d726d"
            android:text="@string/Tuesday"
            android:textSize="17sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/pill_box_wednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#6d726d"
            android:text="@string/Wednesday"
            android:textSize="17sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/pill_box_thursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#6d726d"
            android:text="@string/Thursday"
            android:textSize="17sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/pill_box_friday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#6d726d"
            android:text="@string/Friday"
            android:textSize="17sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/pill_box_saturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#6d726d"
            android:text="@string/Saturday"
            android:textSize="17sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center" />

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="35dip"
        android:orientation="horizontal"
        android:paddingLeft="15dp">
        <TextView
            android:id="@+id/medicineTakeDosage"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:textSize="17sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>

</LinearLayout>
